# MiniFEA

./: CMakeLists.txt  LICENSE  README.md  main.py  pyproject.toml
common/: mesh_utils.cpp  mesh_utils.hpp  shader_utils.cpp  shader_utils.hpp
visualiser/: adapters.py  camera.py  heirarchy.txt  hud_overlay.py  input_controller.py  mesh_adapter.py  mesh_data.py  projection_manager.py  render2d.py  render3d.py  renderer.py  renderer_concept.txt  scene.py  shader.py  view_manager.py  viewer_app.py  visualiser23.py
visualiser/Gizmo/: CMakeLists.txt  __init__.py  gizmo.cpp  gizmo.hpp
visualiser/shaders/: line.frag  line.vert
visualiser/testing/: pyramid_example.py  test_mesh_data.py
visualiser_dep/: colour_maps.py  heirarchy.txt  mesh_adapter.py  render2d.py  renderer_concept.txt  viewer_app.py
